--- a/neptune.yaml
+++ b/neptune.yaml
@@ -8,7 +8,7 @@ metric:
   goal: maximize
 
 #Comment out if not in Cloud Environment
-pip-requirements-file: requirements.txt
+#pip-requirements-file: requirements.txt
 
 exclude:
   - .git
@@ -22,16 +22,16 @@ exclude:
 
 parameters:
 # Cloud environment
-  data_dir:                        /public/mapping-challenge_data/
-  meta_dir:                        /public/mapping-challenge_data/
-  masks_overlayed_dir:             /public/mapping-challenge_data/masks_overlayed/
-  experiment_dir:                  /output/mapping-challenge/experiments/
+#  data_dir:                        /YOUR_PATH_TO_DATA_ON_CLOUD
+#  meta_dir:                        /YOUR_PATH_TO_DATA_ON_CLOUD
+#  masks_overlayed_dir:             /YOUR_PATH_TO_DATA_ON_CLOUD/masks_overlayed
+#  experiment_dir:                  /YOUR_PATH_TO_OUTPUT_FOLDER_ON_CLOUD/experiments
 
 # Local Environment
-#  data_dir:               /path/to/data
-#  meta_dir:               /path/to/data
-#  masks_overlayed_dir:    /path/to/masks_overlayed
-#  experiment_dir:         /path/to/work/dir
+  data_dir:               /path/to/data
+  meta_dir:               /path/to/data
+  masks_overlayed_dir:    /path/to/masks_overlayed
+  experiment_dir:         /path/to/work/dir
 
   overwrite: 0
   num_workers: 4
