--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@ pandas==0.22.0
 imageio==2.2.0
 pydot_ng==1.0.0
 opencv_python==3.4.0.12
-torch==0.2.0.post3
 attrdict==2.0.0
 scipy==1.0.0
 scikit_image==0.13.1
 torchvision==0.2.0
+torch==0.2.0
 numpy==1.14.0
 imgaug==0.2.5
 neptune_cli==2.8.0
