--- a/neptune.yaml
+++ b/neptune.yaml
@@ -39,6 +39,7 @@ parameters:
   pin_memory: 1
   competition_stage: 1
   api_key: YOUR_CROWDAI_API_KEY
+  stream_mode: False
 
 # General parameters
   image_h: 256
