--- a/neptune.yaml
+++ b/neptune.yaml
@@ -1,7 +1,7 @@
 project: MC
 
 name: mapping_challenge_open_solution
-tags: [solution_1,]
+tags: [solution_1]
 
 metric:
   channel: 'Final Validation Score'
@@ -25,21 +25,22 @@ parameters:
 #  data_dir:                        /YOUR_PATH_TO_DATA_ON_CLOUD
 #  meta_dir:                        /YOUR_PATH_TO_DATA_ON_CLOUD
 #  masks_overlayed_dir:             /YOUR_PATH_TO_DATA_ON_CLOUD/masks_overlayed
+#  masks_overlayed_eroded_dir:      /YOUR_PATH_TO_DATA_ON_CLOUD/masks_overlayed_eroded/
 #  experiment_dir:                  /YOUR_PATH_TO_OUTPUT_FOLDER_ON_CLOUD/experiments
 
 # Local Environment
-  data_dir: /mnt/ml-team/minerva/open-solutions/mapping-challenge/data
-  meta_dir: /mnt/ml-team/homes/andrzej.pyskir/mapping_challenge/files
-  masks_overlayed_dir: /mnt/ml-team/homes/andrzej.pyskir/mapping_challenge/files/masks_overlayed
-  masks_overlayed_eroded_dir: /mnt/ml-team/homes/andrzej.pyskir/mapping_challenge/files/masks_overlayed_eroded
-  experiment_dir: /mnt/ml-team/homes/jakub.czakon/mapping_challenge/experiments/dev
+  data_dir:                   /path/to/data
+  meta_dir:                   /path/to/data
+  masks_overlayed_dir:        /path/to/masks_overlayed
+  masks_overlayed_eroded_dir: /path/to/masks_overlayed_eroded
+  experiment_dir:             /path/to/work/dir
 
   overwrite: 0
   num_workers: 4
   load_in_memory: 0
   pin_memory: 1
   competition_stage: 1
-  api_key: d2f6848cbb8312b9114e1695809c346e
+  api_key: YOUR_CROWDAI_API_KEY
   stream_mode: False
 
 # General parameters
@@ -58,20 +59,17 @@ parameters:
 
 # U-Net loss weights (multi-output)
   mask: 0.3
-  contour: 0.5
-  contour_touching: 0.1
-  center: 0.1
   bce_mask: 1.0
-  dice_mask: 1.0
+  dice_mask: 2.0
 
 # Training schedule
-  epochs_nr: 10
+  epochs_nr: 100
   batch_size_train: 20
   batch_size_inference: 20
   lr: 0.0001
   momentum: 0.9
   gamma: 0.99
-  patience: 10
+  patience: 30
   lr_factor: 0.3
   lr_patience: 30
 
