--- a/neptune.yaml
+++ b/neptune.yaml
@@ -41,7 +41,7 @@ parameters:
   pin_memory: 1
   competition_stage: 1
   api_key: YOUR_CROWDAI_API_KEY
-  stream_mode: False
+  stream_mode: 0
 
 # General parameters
   image_h: 256
@@ -87,7 +87,7 @@ parameters:
   dilate_selem_size: 5
 
   #CRF
-  apply_crf: False
+  apply_crf: 0
   nr_iter: 5
   compat_gaussian: 3
   sxy_gaussian: 1
