--- a/neptune.yaml
+++ b/neptune.yaml
@@ -56,6 +56,7 @@ parameters:
   pool_kernel: 3
   pool_stride: 2
   repeat_blocks: 4
+  encoder: standard
 
 # U-Net loss weights (multi-output)
   mask: 0.3
