--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pandas==0.22.0
 imageio==2.2.0
 pydot_ng==1.0.0
 opencv_python==3.4.0.12
-torch==0.2.0.post3
+torch==0.3.1
 attrdict==2.0.0
 scipy==1.0.0
 scikit_image==0.13.1
@@ -14,9 +14,8 @@ imgaug==0.2.5
 neptune_cli==2.8.0
 ipython==6.3.1
 Pillow==5.1.0
-pycocotools==2.0.0
-skimage==0.0
 PyYAML==3.12
 Cython==0.28.2
 crowdai==1.0.19
 git+https://github.com/lucasb-eyer/pydensecrf.git
+pycocotools==2.0.0
