--- a/neptune.yaml
+++ b/neptune.yaml
@@ -41,7 +41,7 @@ parameters:
   pin_memory: 1
   competition_stage: 1
   api_key: YOUR_CROWDAI_API_KEY
-  stream_mode: 0
+  stream_mode: 1
 
 # General parameters
   image_h: 256
@@ -56,7 +56,7 @@ parameters:
   pool_kernel: 3
   pool_stride: 2
   repeat_blocks: 4
-  encoder: standard
+  encoder: ResNet
 
 # U-Net loss weights (multi-output)
   mask: 0.3
@@ -89,7 +89,13 @@ parameters:
   erosion_percentages: '[10,20,30]'
   dilate_selem_size: 5
 
-  #CRF
+# Mosaic padding
+  mosaic_image_h: 300
+  mosaic_image_w: 300
+  mosaic_pad_h: 42
+  mosaic_pad_w: 42
+
+# CRF
   apply_crf: 0
   nr_iter: 5
   compat_gaussian: 3
