--- a/neptune.yaml
+++ b/neptune.yaml
@@ -41,7 +41,7 @@ parameters:
   competition_stage: 1
   api_key: YOUR_CROWDAI_API_KEY
   stream_mode: 1
-  evaluation_data_sample: 6e3
+  evaluation_data_sample: 1000
 
 # General parameters
   image_h: 256
@@ -93,8 +93,8 @@ parameters:
 # Mosaic padding
   mosaic_image_h: 300
   mosaic_image_w: 300
-  mosaic_pad_h: 42
-  mosaic_pad_w: 42
+  mosaic_pad_h: 10
+  mosaic_pad_w: 10
 
 # CRF
   apply_crf: 0
