Dev dice loss (#89)
* fix size weights

* add mixed dice + weighted ce loss

* fixes

* parametrize loss weights

* remove get_datagen function overriding

* dice loss per channel, some fixes

* fixes and smooth added to Dice loss instead of eps

* fixes and smooth added to Dice loss and eps, and parametrized

* sigmoid -> softmax in dice loss

* softmax2d

* move softmax to models.py

* parametrize softmax and sigmoid in dice loss

--- a/neptune.yaml
+++ b/neptune.yaml
@@ -75,6 +75,8 @@ parameters:
   lr_patience: 30
   w0: 10
   sigma: 10
+  dice_smooth: 1
+  dice_activation: 'softmax'
 
 # Regularization
   use_batch_norm: 1
