Dev deeper archs (#102)
* dropped mask param

* added deeper resnets and spatial2d dropout

* updated config

* fixed casting

--- a/neptune.yaml
+++ b/neptune.yaml
@@ -59,7 +59,7 @@ parameters:
   pool_kernel: 3
   pool_stride: 2
   repeat_blocks: 4
-  encoder: ResNet
+  encoder: ResNet152
 
 # U-Net loss weights (multi-output)
   bce_mask: 1.0
