--- a/neptune.yaml
+++ b/neptune.yaml
@@ -36,15 +36,19 @@ parameters:
 
   overwrite: 0
   num_workers: 4
+  num_threads: 1000
   load_in_memory: 0
   pin_memory: 1
   competition_stage: 1
   api_key: YOUR_CROWDAI_API_KEY
-  stream_mode: 0
+  stream_mode: 1
+  evaluation_data_sample: 1000
+  border_width: 0
+  small_annotations_size: 14
 
 # General parameters
-  image_h: 256
-  image_w: 256
+  image_h: 192
+  image_w: 192
   image_channels: 3
 
 # U-Net parameters (multi-output)
@@ -55,10 +59,9 @@ parameters:
   pool_kernel: 3
   pool_stride: 2
   repeat_blocks: 4
-  encoder: standard
+  encoder: ResNet152
 
 # U-Net loss weights (multi-output)
-  mask: 0.3
   bce_mask: 1.0
   dice_mask: 1.0
 
@@ -74,6 +77,8 @@ parameters:
   lr_patience: 30
   w0: 10
   sigma: 10
+  dice_smooth: 1
+  dice_activation: 'softmax'
 
 # Regularization
   use_batch_norm: 1
@@ -86,10 +91,17 @@ parameters:
   threshold: 0.5
   min_nuclei_size: 20
   erosion_percentages: '[10,20,30]'
-  erode_selem_size: 0
+  erode_selem_size: 3
   dilate_selem_size: 0
 
-  #CRF
+# Inference padding
+  crop_image_h: 300
+  crop_image_w: 300
+  h_pad: 10
+  w_pad: 10
+  pad_method: 'replicate'
+
+# CRF
   apply_crf: 0
   nr_iter: 5
   compat_gaussian: 3
