--- a/neptune.yaml
+++ b/neptune.yaml
@@ -41,14 +41,15 @@ parameters:
   pin_memory: 1
   competition_stage: 1
   api_key: YOUR_CROWDAI_API_KEY
-  stream_mode: 1
-  evaluation_data_sample: 1000
+  stream_mode: 0
+  evaluation_data_sample: 100
   border_width: 0
   small_annotations_size: 14
+  loader_mode: crop_and_pad
 
 # General parameters
-  image_h: 192
-  image_w: 192
+  image_h: 256
+  image_w: 256
   image_channels: 3
 
 # U-Net parameters (multi-output)
@@ -63,26 +64,26 @@ parameters:
 
 # U-Net loss weights (multi-output)
   bce_mask: 1.0
-  dice_mask: 1.0
+  dice_mask: 0.2
 
 # Training schedule
   epochs_nr: 100
-  batch_size_train: 20
-  batch_size_inference: 20
-  lr: 0.0001
+  batch_size_train: 2
+  batch_size_inference: 32
+  lr: 0.0005
   momentum: 0.9
-  gamma: 0.99
+  gamma: 1.0
   patience: 30
   lr_factor: 0.3
   lr_patience: 30
-  w0: 10
+  w0: 50
   sigma: 10
   dice_smooth: 1
   dice_activation: 'softmax'
 
 # Regularization
   use_batch_norm: 1
-  l2_reg_conv: 0.0001
+  l2_reg_conv: 0.001
   l2_reg_dense: 0.0
   dropout_conv: 0.1
   dropout_dense: 0.0
