--- a/neptune.yaml
+++ b/neptune.yaml
@@ -93,8 +93,9 @@ parameters:
   threshold: 0.5
   min_nuclei_size: 20
   erosion_percentages: '[10,20,30]'
-  erode_selem_size: 0
-  dilate_selem_size: 0
+  erode_selem_size: 3
+  dilate_selem_size: 3
+  tta_aggregation_method: gmean
 
 # Inference padding
   crop_image_h: 300
