--- a/src/neptune.yaml
+++ b/src/neptune.yaml
@@ -95,6 +95,7 @@ parameters:
   erosion_percentages: '[10,20,30]'
   erode_selem_size: 0
   dilate_selem_size: 0
+  iou_threshold: 0.5
 
 # Inference padding
   crop_image_h: 300
