--- a/neptune.yaml
+++ b/neptune.yaml
@@ -41,11 +41,11 @@ parameters:
   pin_memory: 1
   competition_stage: 1
   api_key: YOUR_CROWDAI_API_KEY
-  stream_mode: 0
   evaluation_data_sample: 1000
   border_width: 0
   small_annotations_size: 14
-  loader_mode: crop_and_pad
+  loader_mode: resize
+  stream_mode: 0
 
 # General parameters
   image_h: 256
@@ -60,7 +60,7 @@ parameters:
   pool_kernel: 3
   pool_stride: 2
   repeat_blocks: 4
-  encoder: AlbuNet
+  encoder: ResNet101
 
 # U-Net loss weights (multi-output)
   bce_mask: 1.0
@@ -93,8 +93,8 @@ parameters:
   threshold: 0.5
   min_nuclei_size: 20
   erosion_percentages: '[10,20,30]'
-  erode_selem_size: 3
-  dilate_selem_size: 3
+  erode_selem_size: 0
+  dilate_selem_size: 2
   tta_aggregation_method: gmean
 
 # Inference padding
@@ -103,15 +103,6 @@ parameters:
   h_pad: 10
   w_pad: 10
   pad_method: 'replicate'
-
-# CRF
-  apply_crf: 0
-  nr_iter: 5
-  compat_gaussian: 3
-  sxy_gaussian: 1
-  compat_bilateral: 10
-  sxy_bilateral: 1
-  srgb: 50
 
 #Neptune monitor
   unet_outputs_to_plot: '["multichannel_map",]'
