--- a/neptune.yaml
+++ b/neptune.yaml
@@ -1,4 +1,4 @@
-project: MC
+project: YOUR_PROJECT_NAME
 
 name: mapping_challenge_open_solution
 tags: [solution_1]
@@ -21,19 +21,13 @@ exclude:
   - notebooks
 
 parameters:
-# Cloud environment
-#  data_dir:                        /YOUR_PATH_TO_DATA_ON_CLOUD
-#  meta_dir:                        /YOUR_PATH_TO_DATA_ON_CLOUD
-#  masks_overlayed_dir:             /YOUR_PATH_TO_DATA_ON_CLOUD/masks_overlayed
-#  experiment_dir:                  /YOUR_PATH_TO_OUTPUT_FOLDER_ON_CLOUD/experiments
-
-# Local Environment
+# Data Paths
   data_dir:                   /path/to/data
   meta_dir:                   /path/to/data
-  masks_overlayed_dir:        /path/to/masks_overlayed
-  masks_overlayed_eroded_dir: /path/to/masks_overlayed_eroded
+  masks_overlayed_prefix: masks_overlayed
   experiment_dir:             /path/to/work/dir
 
+# Execution
   overwrite: 0
   num_workers: 4
   num_threads: 1000
@@ -41,11 +35,12 @@ parameters:
   pin_memory: 1
   competition_stage: 1
   api_key: YOUR_CROWDAI_API_KEY
-  stream_mode: 0
   evaluation_data_sample: 1000
   border_width: 0
   small_annotations_size: 14
-  loader_mode: crop_and_pad
+  loader_mode: resize
+  stream_mode: 0
+
 
 # General parameters
   image_h: 256
@@ -60,7 +55,7 @@ parameters:
   pool_kernel: 3
   pool_stride: 2
   repeat_blocks: 4
-  encoder: AlbuNet
+  encoder: ResNet101
 
 # U-Net loss weights (multi-output)
   bce_mask: 1.0
@@ -94,7 +89,8 @@ parameters:
   min_nuclei_size: 20
   erosion_percentages: '[10,20,30]'
   erode_selem_size: 0
-  dilate_selem_size: 0
+  dilate_selem_size: 2
+  tta_aggregation_method: gmean
 
 # Inference padding
   crop_image_h: 300
@@ -102,15 +98,6 @@ parameters:
   h_pad: 10
   w_pad: 10
   pad_method: 'replicate'
-
-# CRF
-  apply_crf: 0
-  nr_iter: 5
-  compat_gaussian: 3
-  sxy_gaussian: 1
-  compat_bilateral: 10
-  sxy_bilateral: 1
-  srgb: 50
 
 #Neptune monitor
   unet_outputs_to_plot: '["multichannel_map",]'
