--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ imgaug==0.2.5
 neptune-cli
 ipython==6.3.1
 Pillow==5.1.0
-PyYAML==3.12
+pyyaml>=4.2b1
 Cython==0.28.2
 crowdai==1.0.19
 git+https://github.com/lucasb-eyer/pydensecrf.git
