--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ scikit_image==0.13.1
 torchvision==0.2.0
 numpy==1.14.0
 imgaug==0.2.5
-neptune-cli
+neptune-client
 ipython==6.3.1
 Pillow==5.1.0
 pyyaml>=4.2b1
