--- a/neptune.yaml
+++ b/neptune.yaml
@@ -9,7 +9,7 @@ parameters:
   data_dir:                   /path/to/data
   meta_dir:                   /path/to/data
   masks_overlayed_prefix: masks_overlayed
-  experiment_dir:             /path/to/work/dir
+  experiment_dir:             /path/to/experiment/work/dir
 
 # Execution
   overwrite: 0
@@ -68,7 +68,6 @@ parameters:
   dropout_dense: 0.0
 
 # Postprocessing
-  threshold: 0.5
   erode_selem_size: 0
   dilate_selem_size: 0
   tta_aggregation_method: gmean
