--- a/neptune.yaml
+++ b/neptune.yaml
@@ -1,15 +1,15 @@
-project: YOUR_PROJECT_NAME
+project: shared/showroom
 
-name: mapping_challenge_open_solution
+name: mapping_challenge_baseline
 tags: [solution_5]
 
 
 parameters:
 # Data Paths
-  data_dir:                   /path/to/data
-  meta_dir:                   /path/to/data
+  data_dir: data/raw
+  meta_dir: data/meta
   masks_overlayed_prefix: masks_overlayed
-  experiment_dir:             /path/to/experiment/work/dir
+  experiment_dir: data/experiments/mapping_challenge_baseline
 
 # Execution
   overwrite: 0
